2005-03-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed some unnecessary inclusions of input.h.
	* Removed unnecessary inclusion of main.h from eval.c.
	* Removed unnecessary inclusion of eval.h from parser.c.
	* Generalise setinputfile for use in read_profile/readcmdfile.
	* Handle SKIPEVAL in read_profile by exiting.
	* Let evaltree handle traps from cmdloop.

2005-03-25  Gerrit Pape <pape@smarden.org>

	* Add trailing equal sign in setvar for variables set to null.

2005-03-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Cleaned up src/Makefile.am.
	* Get rid of duplicate -g -O2 in CFLAGS.
	* Eliminate first null termination in setvar.
	* Turn evalskip into a bit field.

2005-03-25  Gilles Chanteperdrix <gilles.chanteperdrix@laposte.net>

	* Fixed support for cross-compilation.

2005-03-03  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed qflag.
	* Removed redundant setstackmark from dotcmd.
	* Do not clobber exit status in dotcmd.

2005-03-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Renamed symbols to avoid conflict with libc.
	* Optimisations in bltin/test.c.

2005-02-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Replaced EXEVAL with SKIPEVAL.
	* Update funcnest atomically.
	* Only set skipcount for break and continue.
	* Removed expcmd built-in.
	* Normalise input in likely/unlikely macros.

2005-02-28  A Costa <agcosta@gis.net>

	* Corrected that/than typo in manual page.

2005-02-25  A Costa <agcosta@gis.net>

	* Corrected grammar in manual page.

2005-02-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Changed boolean rootshell into shlvl counter.
	* Catch set -e exits within built-in commands.
	* Size optimisations with setjmp in main().
	* Only reread exitstatus on EXEXIT in exitshell.
	* Eliminated global exerrno.

2005-01-31  Gerrit Pape <pape@smarden.org>

	* Release 0.5.2.
	* Corrected manual entry about ENV and non-interactive shells.

2004-11-24  Gerrit Pape <pape@smarden.org>

	* Spell behaviour consistently in manual page.
